src/qt/libqmetacontainer.bf

	
	public int32 Size(void* container)
	{
		return CQt.QMetaContainer_Size(this.nativePtr, container);
	}
	
	public bool CanClear()
	{
		return CQt.QMetaContainer_CanClear(this.nativePtr);
	}
	
	public void Clear(void* container)
	{
		CQt.QMetaContainer_Clear(this.nativePtr, container);
	}
	
	public bool HasIterator()
	{
		return CQt.QMetaContainer_HasIterator(this.nativePtr);
	}
	
	public void* Begin(void* container)
	{
		return CQt.QMetaContainer_Begin(this.nativePtr, container);
	}
	
	public void* End(void* container)
	{
		return CQt.QMetaContainer_End(this.nativePtr, container);
	}
	
	public void DestroyIterator(void* iterator)
	{
		CQt.QMetaContainer_DestroyIterator(this.nativePtr, iterator);
	}
	
	public bool CompareIterator(void* i, void* j)
	{
		return CQt.QMetaContainer_CompareIterator(this.nativePtr, i, j);
	}
	
	public void CopyIterator(void* target, void* source)
	{
		CQt.QMetaContainer_CopyIterator(this.nativePtr, target, source);
	}
	
	public void AdvanceIterator(void* iterator, int32 step)
	{
		CQt.QMetaContainer_AdvanceIterator(this.nativePtr, iterator, step);
	}
	
	public int32 DiffIterator(void* i, void* j)
	{
		return CQt.QMetaContainer_DiffIterator(this.nativePtr, i, j);
	}
	
	public bool HasConstIterator()
	{
		return CQt.QMetaContainer_HasConstIterator(this.nativePtr);
	}
	
	public void* ConstBegin(void* container)
	{
		return CQt.QMetaContainer_ConstBegin(this.nativePtr, container);
	}
	
	public void* ConstEnd(void* container)
	{
		return CQt.QMetaContainer_ConstEnd(this.nativePtr, container);
	}
	
	public void DestroyConstIterator(void* iterator)
	{
		CQt.QMetaContainer_DestroyConstIterator(this.nativePtr, iterator);
	}
	
	public bool CompareConstIterator(void* i, void* j)
	{
		return CQt.QMetaContainer_CompareConstIterator(this.nativePtr, i, j);
	}
	
	public void CopyConstIterator(void* target, void* source)
	{
		CQt.QMetaContainer_CopyConstIterator(this.nativePtr, target, source);
	}
	
	public void AdvanceConstIterator(void* iterator, int32 step)
	{
		CQt.QMetaContainer_AdvanceConstIterator(this.nativePtr, iterator, step);
	}
	
	public int32 DiffConstIterator(void* i, void* j)
	{
		return CQt.QMetaContainer_DiffConstIterator(this.nativePtr, i, j);
	}
	
}
extension CQt
{
	[LinkName("QMetaSequence_new")]
	public static extern void* QMetaSequence_new(void* other);
	[LinkName("QMetaSequence_new2")]
	public static extern void* QMetaSequence_new2(void* other);
	[LinkName("QMetaSequence_new3")]
	public static extern void* QMetaSequence_new3();
	[LinkName("QMetaSequence_ValueMetaType")]
	public static extern void QMetaSequence_ValueMetaType(void* c_this);
	[LinkName("QMetaSequence_IsSortable")]
	public static extern bool QMetaSequence_IsSortable(void* c_this);
	[LinkName("QMetaSequence_CanAddValueAtBegin")]
	public static extern bool QMetaSequence_CanAddValueAtBegin(void* c_this);
	[LinkName("QMetaSequence_AddValueAtBegin")]
	public static extern void QMetaSequence_AddValueAtBegin(void* c_this, void* container, void* value);
	[LinkName("QMetaSequence_CanAddValueAtEnd")]
	public static extern bool QMetaSequence_CanAddValueAtEnd(void* c_this);
	[LinkName("QMetaSequence_AddValueAtEnd")]
	public static extern void QMetaSequence_AddValueAtEnd(void* c_this, void* container, void* value);
	[LinkName("QMetaSequence_CanRemoveValueAtBegin")]
	public static extern bool QMetaSequence_CanRemoveValueAtBegin(void* c_this);
	[LinkName("QMetaSequence_RemoveValueAtBegin")]
	public static extern void QMetaSequence_RemoveValueAtBegin(void* c_this, void* container);
	[LinkName("QMetaSequence_CanRemoveValueAtEnd")]
	public static extern bool QMetaSequence_CanRemoveValueAtEnd(void* c_this);
	[LinkName("QMetaSequence_RemoveValueAtEnd")]
	public static extern void QMetaSequence_RemoveValueAtEnd(void* c_this, void* container);
	[LinkName("QMetaSequence_CanGetValueAtIndex")]
	public static extern bool QMetaSequence_CanGetValueAtIndex(void* c_this);
	[LinkName("QMetaSequence_ValueAtIndex")]
	public static extern void QMetaSequence_ValueAtIndex(void* c_this, void* container, int32 index, void* result);
	[LinkName("QMetaSequence_CanSetValueAtIndex")]
	public static extern bool QMetaSequence_CanSetValueAtIndex(void* c_this);
	[LinkName("QMetaSequence_SetValueAtIndex")]
	public static extern void QMetaSequence_SetValueAtIndex(void* c_this, void* container, int32 index, void* value);
	[LinkName("QMetaSequence_CanAddValue")]
	public static extern bool QMetaSequence_CanAddValue(void* c_this);
	[LinkName("QMetaSequence_AddValue")]
	public static extern void QMetaSequence_AddValue(void* c_this, void* container, void* value);
	[LinkName("QMetaSequence_CanRemoveValue")]
	public static extern bool QMetaSequence_CanRemoveValue(void* c_this);
	[LinkName("QMetaSequence_RemoveValue")]
	public static extern void QMetaSequence_RemoveValue(void* c_this, void* container);
	[LinkName("QMetaSequence_CanGetValueAtIterator")]
	public static extern bool QMetaSequence_CanGetValueAtIterator(void* c_this);
	[LinkName("QMetaSequence_ValueAtIterator")]
	public static extern void QMetaSequence_ValueAtIterator(void* c_this, void* iterator, void* result);
	[LinkName("QMetaSequence_CanSetValueAtIterator")]
	public static extern bool QMetaSequence_CanSetValueAtIterator(void* c_this);
	[LinkName("QMetaSequence_SetValueAtIterator")]
	public static extern void QMetaSequence_SetValueAtIterator(void* c_this, void* iterator, void* value);
	[LinkName("QMetaSequence_CanInsertValueAtIterator")]
	public static extern bool QMetaSequence_CanInsertValueAtIterator(void* c_this);
	[LinkName("QMetaSequence_InsertValueAtIterator")]
	public static extern void QMetaSequence_InsertValueAtIterator(void* c_this, void* container, void* iterator, void* value);
	[LinkName("QMetaSequence_CanEraseValueAtIterator")]
	public static extern bool QMetaSequence_CanEraseValueAtIterator(void* c_this);
	[LinkName("QMetaSequence_EraseValueAtIterator")]
	public static extern void QMetaSequence_EraseValueAtIterator(void* c_this, void* container, void* iterator);
	[LinkName("QMetaSequence_CanEraseRangeAtIterator")]
	public static extern bool QMetaSequence_CanEraseRangeAtIterator(void* c_this);
	[LinkName("QMetaSequence_EraseRangeAtIterator")]
	public static extern void QMetaSequence_EraseRangeAtIterator(void* c_this, void* container, void* iterator1, void* iterator2);
	[LinkName("QMetaSequence_CanGetValueAtConstIterator")]
	public static extern bool QMetaSequence_CanGetValueAtConstIterator(void* c_this);
	[LinkName("QMetaSequence_ValueAtConstIterator")]
	public static extern void QMetaSequence_ValueAtConstIterator(void* c_this, void* iterator, void* result);
	/// Delete this object from C++ memory
	[LinkName("QMetaSequence_Delete")]
	public static extern void QMetaSequence_Delete(void* self);
}
public interface IQMetaAssociation
{
	void* NativePtr { get; }
}
public class QMetaAssociation : IQMetaAssociation, IQMetaContainer
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(IQMetaAssociation other)
	{
		this.nativePtr = CQt.QMetaAssociation_new((other == default) ? default : (void*)other.NativePtr);
	}
	
	public ~this()
	{
		CQt.QMetaAssociation_Delete(this.nativePtr);
	}
	
	public void KeyMetaType()
	{
		CQt.QMetaAssociation_KeyMetaType(this.nativePtr);
	}
	
	public void MappedMetaType()
	{
		CQt.QMetaAssociation_MappedMetaType(this.nativePtr);
	}
	
	public bool CanInsertKey()
	{
		return CQt.QMetaAssociation_CanInsertKey(this.nativePtr);
	}
	
	public void InsertKey(void* container, void* key)
	{
		CQt.QMetaAssociation_InsertKey(this.nativePtr, container, key);
	}
	
	public bool CanRemoveKey()
	{
		return CQt.QMetaAssociation_CanRemoveKey(this.nativePtr);
	}
	
	public void RemoveKey(void* container, void* key)
	{
		CQt.QMetaAssociation_RemoveKey(this.nativePtr, container, key);
	}
	
	public bool CanContainsKey()
	{
		return CQt.QMetaAssociation_CanContainsKey(this.nativePtr);
	}
	
	public bool ContainsKey(void* container, void* key)
	{
		return CQt.QMetaAssociation_ContainsKey(this.nativePtr, container, key);
	}
	
	public bool CanGetMappedAtKey()
	{
		return CQt.QMetaAssociation_CanGetMappedAtKey(this.nativePtr);
	}
	
	public void MappedAtKey(void* container, void* key, void* mapped)
	{
		CQt.QMetaAssociation_MappedAtKey(this.nativePtr, container, key, mapped);
	}
	
	public bool CanSetMappedAtKey()
	{
		return CQt.QMetaAssociation_CanSetMappedAtKey(this.nativePtr);
	}
	
	public void SetMappedAtKey(void* container, void* key, void* mapped)
	{
		CQt.QMetaAssociation_SetMappedAtKey(this.nativePtr, container, key, mapped);
	}
	
	public bool CanGetKeyAtIterator()
	{
		return CQt.QMetaAssociation_CanGetKeyAtIterator(this.nativePtr);
	}
	
	public void KeyAtIterator(void* iterator, void* key)
	{
		CQt.QMetaAssociation_KeyAtIterator(this.nativePtr, iterator, key);
	}
	
	public bool CanGetKeyAtConstIterator()
	{
		return CQt.QMetaAssociation_CanGetKeyAtConstIterator(this.nativePtr);
	}
	
	public void KeyAtConstIterator(void* iterator, void* key)
	{
		CQt.QMetaAssociation_KeyAtConstIterator(this.nativePtr, iterator, key);
	}
	
	public bool CanGetMappedAtIterator()
	{
		return CQt.QMetaAssociation_CanGetMappedAtIterator(this.nativePtr);
	}
	
	public void MappedAtIterator(void* iterator, void* mapped)
	{
		CQt.QMetaAssociation_MappedAtIterator(this.nativePtr, iterator, mapped);
	}
	
	public bool CanGetMappedAtConstIterator()
	{
		return CQt.QMetaAssociation_CanGetMappedAtConstIterator(this.nativePtr);
	}
	
	public void MappedAtConstIterator(void* iterator, void* mapped)
	{
		CQt.QMetaAssociation_MappedAtConstIterator(this.nativePtr, iterator, mapped);
	}
	
	public bool CanSetMappedAtIterator()
	{
		return CQt.QMetaAssociation_CanSetMappedAtIterator(this.nativePtr);
	}
	
	public void SetMappedAtIterator(void* iterator, void* mapped)
	{
		CQt.QMetaAssociation_SetMappedAtIterator(this.nativePtr, iterator, mapped);
	}
	
	public bool CanCreateIteratorAtKey()
	{
		return CQt.QMetaAssociation_CanCreateIteratorAtKey(this.nativePtr);
	}
	
	public void* CreateIteratorAtKey(void* container, void* key)
	{
		return CQt.QMetaAssociation_CreateIteratorAtKey(this.nativePtr, container, key);
	}
	
	public bool CanCreateConstIteratorAtKey()
	{
		return CQt.QMetaAssociation_CanCreateConstIteratorAtKey(this.nativePtr);
	}
	
	public void* CreateConstIteratorAtKey(void* container, void* key)
	{
		return CQt.QMetaAssociation_CreateConstIteratorAtKey(this.nativePtr, container, key);
	}
	
	public bool HasInputIterator()
	{
		return CQt.QMetaContainer_HasInputIterator(this.nativePtr);
	}
	
	public bool HasForwardIterator()
	{
		return CQt.QMetaContainer_HasForwardIterator(this.nativePtr);
	}
	
	public bool HasBidirectionalIterator()
	{
		return CQt.QMetaContainer_HasBidirectionalIterator(this.nativePtr);
	}
	
	public bool HasRandomAccessIterator()
	{
		return CQt.QMetaContainer_HasRandomAccessIterator(this.nativePtr);
	}
	
	public bool HasSize()
	{
		return CQt.QMetaContainer_HasSize(this.nativePtr);
	}
	
	public int32 Size(void* container)
	{
		return CQt.QMetaContainer_Size(this.nativePtr, container);
	}
	
	public bool CanClear()
	{
		return CQt.QMetaContainer_CanClear(this.nativePtr);
	}
	
	public void Clear(void* container)
	{
		CQt.QMetaContainer_Clear(this.nativePtr, container);
	}
	
	public bool HasIterator()
	{
		return CQt.QMetaContainer_HasIterator(this.nativePtr);
	}
	
	public void* Begin(void* container)
	{
		return CQt.QMetaContainer_Begin(this.nativePtr, container);
	}
	
	public void* End(void* container)
	{
		return CQt.QMetaContainer_End(this.nativePtr, container);
	}
	
	public void DestroyIterator(void* iterator)
	{
		CQt.QMetaContainer_DestroyIterator(this.nativePtr, iterator);
	}
	
	public bool CompareIterator(void* i, void* j)
	{
		return CQt.QMetaContainer_CompareIterator(this.nativePtr, i, j);
	}
	
	public void CopyIterator(void* target, void* source)
	{
		CQt.QMetaContainer_CopyIterator(this.nativePtr, target, source);
	}
